# ws2025-physics760-sandpile-simulation

./: .gitignore  README.md  main.py  pyproject.toml
figures/: .gitignore  README.md
report/latex/: 00_report.tex  01_title.tex  02_abstract.tex  03_introduction.tex  04_theory.tex  05_methods.tex  06_results.tex  07_discussion.tex  08_summary.tex  apssamp.bib  report.sty
report/paper/: main.tex  references.bib
report/paper/sections/: 01_title.tex  02_abstract.tex  03_introduction.tex  04_theory.tex  05_methods.tex  06_results.tex  07_discussion.tex  08_summary.tex  09_appendix.tex
report/presentation/: homework.sty  main.tex  references.bib
report/presentation/figures/: scaling_exp_closed_nonconservative.tex  scaling_exp_closed_nonconservative_gamma.tex  scaling_exp_open_conservative.tex  scaling_exp_open_conservative_gamma.tex  scaling_exp_open_nonconservative.tex  scaling_exp_open_nonconservative_gamma.tex
report/presentation/sections/: 01_motivation.tex  02_sandpiles.tex  03_implementation.tex  04_results.tex
src/: config.yml  config_plots.yml  main.py  test.py  test2.py  utils.py
src/calc/: scaling_exponents.py  simulation.py
src/experiments/: 01_paper_reproduction.py  02_burn_in_comparison.py  03_paper_reproduction_5d.py
src/model/: capture_sandpile.py  io.py  sandpile.py
src/tests/: relax_test.py  test2.py
src/visualization/: burn_in_plots.py  heat_map_generator.py  mappings.py  plots.py
